--- a/style.css
+++ b/style.css
@@ -44,8 +44,12 @@ p {
 
 h3 {
     font-family: "REXpaint";
+    font-weight: normal;
     margin-top: 125px;
-    font-size: 3rem;
+}
+
+pre{
+    font-family: "REXpaint";
 }
 
 h1{
@@ -55,6 +59,7 @@ h1{
 
 }
 .navbar ul{
+    /*
     font-family: "Handjet", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
@@ -62,6 +67,8 @@ h1{
       "ELGR" 1,
       "ELSH" 2;
     font-size: 4.5rem;
+    */
+    font-family: "REXpaint";
     list-style-type: none;
     padding: 0px;
     margin: 0px;
